[project]
name = "enso-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "asyncpg>=0.30.0",
    "pytelegrambotapi>=4.26.0",
    "python-dotenv>=1.1.0",
    "redis>=6.0.0",
]

[tool.mypy]
strict = true
